# HomeWork_HM_7b

./: CMakeLists.txt  CMakeSettings.json  HomeWork_HM_7b.cpp  HomeWork_HM_7b.h  studentsGroupProto.proto
